add new interfaces elements but any features

--- a/MIMIRSOFT/MIMIRSOFT/Form1.resx
+++ b/MIMIRSOFT/MIMIRSOFT/Form1.resx
@@ -67,90 +67,91 @@
   <data name="toolStripButton1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAALfSURBVFhHvZdLSBtBHMa3lB48FKSHHkrAQymKWI0as5tN
-        NpPd7G42L2OsiWcvPXkR7xZvlSLSQ0qLIIViS3vKodAHFKnVBKJNHzGPTbLWmxcPHjyISKYzZkqxaqOb
-        XT/4Qdj5z//7dpPMzlB/xLxmWka10Fz8V1iNb4aycS08Lb9nbpBh8xXbDC4gY3gMLbgzogXHY29iV0mZ
-        OeqZ62kd2QwdxJDpaaCx3HDeJ5Jy4+V62kejJ4DM/oMWrCGSygp/m0wzTkzCBka0ADwn+/e0wAybZK+T
-        6c2LSVgBagovwnDVvx2t+scoSF0hbfQLBxjW/FAPUU1Zi+RklrTSp6MAVQXdlU4qSi1aURaVJWAhLS8m
-        HCBa9UED2BuqylN4TSGtzyccYAg1MIpIRd6KlORR0r6xbDhARYbGIy0rGXcvsTlbOECkIqHkxjNYFg8H
-        y9K89MFxk9idFA4wiItNJFyWdsOqONn/rP8asf0rW6ILhMsiKjKfkCpmxY/sLWJdVz2AFxVcDiFVSBPr
-        unCAUFmAlwn9vLeb2NcDBFUBXhpFHtLzJwLwaNB8AiUe+r56jn8FVhQgoHqg2fjzHiivgSz7svf4jxAH
-        8JdQgVkUALprbldedU/23z/lb4gDKCUADacIoPydO5TSrnnHk+6zFyJrogMFcKNJxuHLuaGYdi27k7bG
-        S7H1cQfwFdEkA5A3OChlXFv8JyZO2jcWDiAXOdgUBQ561517QoqdYmYtF3sd4wBSwQX1In5z1oQ0u2h/
-        cVffhkRvAPGnEwppxxr31tbclqwLBRALTnhuNlgoZBzbYIkeQ9Ob35TiAN4CCxuSZyG/zuzzK8zD9pl2
-        47bl3Y/u0N68AxmcjoDJOmr8KpNkX/UZfzBpe9DWyv9gDo6M/gFdh540nXO9s5l3NMNyp+wLfI6BfJ6A
-        PoMMvcN9to9TMcrcwymWZcLS4l4emAMpWgUpexZ8GZjunO00+XhOUb8Bi7h6yY78RtIAAAAASUVORK5C
-        YII=
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAALeSURBVFhHvZdLSBtRFIZTShcuCqWLLkrARSmKWE00ZiaT
+        x2TGmcnkZeIjunbTlZvi3uKuUkS6SGkRpFBsaVdZFPqAIo0maRXT2rw1k7pz48KFCxHJ6b3mlmLVRicz
+        +eGDMHPO+X+YmZt7DX9Ev6FbxpTA3PCvYCmi+NOjSnBa+kDfJLf1V6TiWxitBOAEind3RPFPRN5GrpIy
+        fdQ9130jUAkcRpDpWYxUApmhnEcg5drL8ayHilT8yOw/bPir6NHE5BXuDmnTTnTUwo4oPrggB8OKb4aJ
+        MddJe+OioyYWDYXLECqJO4Nl77gBDFfIGPXCAYYUL6ghrHjWQhmJIaPU6ThAWQbVfJer4S15UV5ijWTk
+        5YQDDJY9oAH74bI0hdcUMvpiwgHCaIBWDJTE7VBRGiPj68uCA2xJoD1CXF51mYnN+cIBQlsi6AGfpY+C
+        m+K8+NF2i9idFg4wgIr1JJAV94IlYbL3ee81YvtXlmgnG9wUoBn4C0Ja+MTcJtY11QL0o4Lm4C/yKWJd
+        Ew4Q2OShmVAvzF3EvhbAX+KhaRQ4oOZPBeDQTf3xFTmQ1t0nH4EJBfCV3KA33pwbpDU2zbwyn3wJcQBv
+        ERXoRZ4Fz7p9T0q4Jnvvn/EZ4gBykQXNKbDA/DAfiSn7vO1p1/kLkSnajgK4UJN2eDIuEJKOuCtmqb8U
+        m560s54CatIAKesE8Ztjm/tMj5Lx9YUDSAUnNETeCbaEbZ9PMlP0rPFyf8c4gJh3gFqEZXuVTzGL1pf3
+        1G1I1AYQftqBT9JrzneWxrZknSiAkLfDhckywK/adtglahy1N74pxQH68wzUJceA9av1gFuhH7XNtGm3
+        Le96fJfqz9mQwdnwmLityiXoGPO6R/uDSevD1hvcBn14bPQP6Dq4U1TG8d6i39EMy5nsW+AyNHA5Avrt
+        WKV2nV+sE4aIQd/DKZbxgbHFFe+bYxNUiU1a0+xy33THbIfOx3OD4TdA7XoB2cmC5gAAAABJRU5ErkJg
+        gg==
 </value>
   </data>
   <data name="toolStripButton2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAALaSURBVFhHvZc7TBRBGMdHCm20QooTOdi7Q+6xM3O3zwML
-        G2M0wViYWFiQmKix0ChoZWMjDTY2FMSYGEM0Boyox/tAOUE4HiIEOEAeIsYYQ+sLgfEbbywwBI5zb//J
-        r5idb7/fd7u3yS6yIDs2wZpUB4qOvyrRv3WXmKy7xEiJ2EFzqbywgIoW6ecu8ZZBw+WZsM4Ww1rKTEF9
-        V7Hx5arLJYtW208txeU9xcbqLDT8kAaTMESsWP98OT/fJ1qmnvoQrewJG2tzpsYWTDVtJuD8WNj4VCHt
-        OyBab5msBjVY0wvTzxkqe28BYzBEl6l9vJSX5xaOjeNHaGdEV+r6zKR83kJGDY29MPWFi06nJHTrcygn
-        Z3eLobTHoXBWV9hcBhiBQV4a6vx5h8MptMmUOhx72wwtPgAFXJ5JhnU+hDZzNjd3v9Aj1K5rE4OwOaOF
-        bGEIXJ26Oi30CEXhl79TQ7YxDUN0gFPo+RVQ2bQatI0pIApOoecDKGxKgQ2bmAS4U+gRatMUOEhtIwFw
-        p9Aj1AqLRAg2bGIC4E6hR6hFVf4ctItxgDuFHqFmWIwHia1wp9DzAUJsjBJb4U6hR6hRCbFRim2lCZxC
-        j1AEFiME20ojPIpCj9DzUJC9JbKtRMAp9HwAujqAZTZsE4MAdwo9Qrc8njONlKz0w8YbOZBRuLwpSNeq
-        vN4rQp9MVaG7LELwShyKhjLEINAMT8Bt2X9TaNen0iOdfkbwr15eHLCeFvjzVRO5Rug2zg23+9RTjJdf
-        B/xswEJaMWZ3KKkDRVbStEmuS9LJBkJ+9sCJ/f7/px3u+z1Kox6EdgnF1rnmdp94AkN0Q4O435c2Ubid
-        9ynpL8rO3iNap54KSSp9jPGPGAzR5/Ntmw64grWUJlR45xQtt58LLtexeoy/d0HDXq83ZTph6AeELB7+
-        9w04nZwrKDjySJa/1ssyq0uRhxgvHXU64VPDumz0+f2XNIPQb9Yia9bNQY93AAAAAElFTkSuQmCC
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAALdSURBVFhHvZc9TBNhGMdfGXTRCRkqUri2QHu996730Wup
+        g4sxmmAcTBwcSEzUOGgUdHJxkQUXBx2IMfETEyERY5ECRaRBoXyIEL7lQ8QYY1j9QuH1Ofs4YAiUen3/
+        yW+4u/ee3793veSO2JAt62BPbvhLD8Ui4teuSIh1Rcy0SOwJLVYWFyk4IvPckr0VsYi5NB0OsoWwkTaT
+        sD5ump8vuFwSjtp87iu0sqPMXJ6Bge8zYAJKJMrUT+cKC304Mv00qEp1S9hcmQ0ZbD6kZ8wYnJ8Imx+r
+        hF0lOHrD5DTqgdpuaD9r6uydDYxAiU5d/3C2oMCNjrUjErI1GtTqe0Ip+ZyNDJsG6wgF5884nQLqVmdv
+        Xt72mKm1JWHhTFBjs1lgCIq80PW5Uw6HE7WplDscO1tNI9kHCyx5NhkMQgnTmD6Rn78b9YS0GcZYPxyc
+        NlQuDICrXdenUE9IHH75W13lxhSUaAcn6uEKwGWZ0gPcmATi4ES9VUBjkxoc4MQEYDlRT0irocFOhRvj
+        gOVEPSEtsDGuwgFOjAGWE/WExHTtz05ejAKWE/WENMPGaEDmiuVEvVVAZSOKzBXLiXpCmjSVDSuUK8/A
+        iXpCorAxJFOuNMGjiHpCnqoB9kaWuBIFJ+qtAspyH5XYICf6AcuJekKuejzHm0TxVy8ceC35s4olfxRQ
+        Vmq83vOoT6Wm2F0RhRJJWDSQJfqBZngCrkniFdSuTrVHOFbnEn52W4v99hODP9912V+LurVz2e0++kQQ
+        ll75RdZnIy2UspuKXA+KnJRpnVwShCONsvzjJZzYK/4/bXDfbytK3EPINlRsnItu9+HHUKILBiRFX8bE
+        4XbeobS3NDd3B45OP1WCUH6P0u8JKNHj822adriCdxVlXId3Thy5+Zx2uQ42UPqtEwZ2e71p8xxK18ny
+        wr5/34Azycmiov0PSkq+NEgSq0+Th5QuHnA64VPDvqz1+f2XDEPIb/UzaxCnvt/KAAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="toolStripButton3.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAa5SURBVFhH7ZZ3TFV3FMexMVLb1DSttnWkiYoIDwRkiAMc
-        qMW9B6i1LlBZ/dM0NaZxg4KgjAcIj43RuEVjNWoA9Y8OoI66QEWZInsPvz3n9+7l3vseNuk//tWTfHLv
-        e++e7/ec8zs3YPF/yLHz551/B2zbjqDAIPwYEoKEpBQUPizGo2eleFz8Gk9KmDI8ZZ6X49mLChS/rERJ
-        qUyFkZflRBnxGiUvXuPhkxIkJhkQEhyCkKBgBAcF4Zddux5Ltkps9fPHjOkzsHD+AvC9IS0LZTXNqG3s
-        0NLUgTpBJ+qbjTS0dKKxpQtNrV1obutCS3s32jq60d7ZjbeNbUjLyBaaMtygZKuE3+YtWOu7Br4+PuB7
-        LqCytgUFzyrNKHxWpaFIprgKfzElVbhXUi2oa25DanqW0JQJpilLtkps3rgJq1euwro1a8H3XMCb+la0
-        Ujd9wR2KLqVOO4jOrh50dvegi+jueYceop4KSEnPFJoygQGB5gVs2rARagxpmTTyNiFmzjt0M2QgG/W8
-        kxDfGZ/r7OIjaIUhNUOjvZ12TbJVYsP6H6CGk+qa2ozifWA0V4piM55Ce2cXTYb3oJP2oQNVdc1ISknX
-        aG/z32pewPp130MNJ1XXN9M58nlq4TMWiDOvpLNXKBQ7QrvytEJQVtOI48lpGm2/LX7mBfDZq0mkpPK3
-        jWIK74OPqJZGzGOuaWBaaG9aUE1dc+eVtU14WVWP+OMpGu0tmzabF8BvgBpO4mQWq65jURn+bDQQ1BqN
-        Kt4aKaeOuevXbxrwqroBxeW1iEtI1mjzHki2Sviu9oGaWEriZBYyhYVlShkqlIt9UcnU4XlFHUool/Mf
-        vapBjD5Jo817INkqwa+gmmj9cTym5DsPXmm4bcp9I/mCUuTfK0WeRC5x/3kVjsYmarR5DyRbJVYtXwE1
-        R2MTKLkaD15U46EK/qyGn2GTe4y0nNqFrEBkdLxGm/dAslVixbLlUBMZrRfJ8lb3RQH9LqBt/5N5Uo4/
-        iN+Zx2X47RFB1/CjcRrtNT6+5gUsW7IUavz8t+NgRAwORelxJDoRR/XJiElMRVxSOvTJGYg3ZCEhJVvA
-        9/rkTMQeT0d0Qiqi9AZEUE4Y5bLGFr9tGm2fVavNC1i6aDH+lcVL/ht9aUisWrHSvIDFCxbiQ8HHINkq
-        wX+GPxR8DJKtEgvmzsP74KQlCxdhGY12JVW/mkbI57iG3um1tFAM3/vSdz70mvGmLycTHvciNp03X6PH
-        30u2SszznoO+uHDhAoqKihQKC1FoSkEBClTk5eXB2Wk8Jri4wtXZBY7jHDSaXJRkq4T3zFkwhR/MyclB
-        fn4+7ty5I7h9+3Yv/L36N/l3vnpOnoKZ9B+W17TpcHdzw3cq3flz5poXwA+bMs/bG5cuXRKic7/zhves
-        2ZjtNROeHh69Rnfv3hVXLoQ7v3XrFm7cuCEK8CKNGVOnUQETNLqsI9kqMd1zKkzhB+UCWIRxo5HajrUR
-        Zmyam5srDK9du4arV6/i8uXLYmoekyYL82kennB3ddPozqIiJFslPCnBlBn08IXz50UBbuOdBc6OTrDX
-        6TSmbMi7cu7cOZw5cwanTp3CpAnumDrFQxTCRbMeFzPby0sUIdkqMZkSTJlOCefPnRedsjHjaD8ONtZj
-        ceXKFY3x6dOncfLkSWRlZSEtLU0s3yR3d0ykqXEe64mmaCp8lWyV4I01hSfAwtevX4e9rQ52NrawtbaG
-        tdUYnD17VnSanZ2NzMxMpKenIzk5GYmJiYiPj4cTFepKE3Oht8HR3l7oTXGfSAW5wWPiJPMCxjs4VrhQ
-        pWp4fJkZGbh48SJGjxqFEcOHY9jQoRg5cmSvaUpKCpKSkpCQkAC9Xo+YmBgcOXIEOiqWp+VgZw8d7Qzr
-        uVIx7lQIH4lk2xv9Bg0a5EpdvuHKZbhig8EgRsuT4I5PnDghupY7jY2NxbFjxxAVFYWIiAiEh4cjNDQU
-        1qNHQ0dHxdjQxNS6zg6OXMCnRmtj9CO++njAgB22Y6zbx9G4Ga44Ijyit8O4uDhhFhkZKYwOHjyI/fv3
-        Y9++fdi7dy/27Nkj7nfv3g0rmtJYKyuB9WgroSfjoLPrIr9viY/YXI5PCLf+/fv/NHDgwMPEIS8vr9gd
-        O3acIMEzBw4cyAkLC/uVjG8ePnw4l6559JnJDQsNvUnFXCNyqIizwYGBqXZ2dlGkEcY6EnzPHLC0tNxA
-        XkMIbrw3+IMl8TnxJePk5DQkICDgG+puKI11GJkOpykIaOQjGP5Oho5gKE3ga39//8E6ne4LWUfFYOn6
-        GdHfwsLC4h9MtVbzlGStrAAAAABJRU5ErkJggg==
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAa5SURBVFhH7ZZZTFVXFIaxMVrb1DSttnVIjYIIVxREEAdQ
+        wAHneQC11glUpr7ZNPWhcRZllOECwmWGaAQnNFajBlAfOoB1qBOoKKMIiAwy+Xetfc/hnHMvNumLT13J
+        l3PuvWf//7/W3idg8X/JtevnXX/7b9+BwIBA/BAcjISkFJTcK8X9x+V4UPoCD8uYCjxinlTi8dMqlD6r
+        Rlm5TJWRZ5VEBfECZU9f4N7DMiQmGRAcFIzgwCAEBQbil127Hki2Sm3z9YOHuwcWLVgIvjekZaGirhn1
+        Te1a3rSjQdCBxmYjr1s60NTSiTetnWhu60TL2y60tXfhbUcXXjW1IS0jW2jKcIOSrVK+W7Zinc9a+Hh7
+        g+85QHV9C4ofV5tR8rhGwy2Z0hr8xZTV4HZZraChuQ2p6VlCUyaIpizZKrVl02asWbUa69euA99zgJeN
+        rWilbnqDOxRdSp22Ex2d3ejo6kYn0dX9Dt1EIwVISc8UmjIB/gHmATZv3AQ1hrRMGnmbEDPnHboYMpCN
+        ut9JiO+Mz3V08ha0wpCaodHeQWdNslVq44bvoYYXNbxpM4r3gtFcCcVmPIW3HZ00GT4HHXQe2lHT0Iyk
+        lHSN9na/beYBNqz/Dmp4UW1jM+0j76cW3mOB2PNq2nuFEnFG6Kw8qhJU1DXhWHKaRtt3q695AN57NYm0
+        qPJVk5jC++AtqqcR85jrXjMtdG5aUEtdc+fV9W/wrKYR8cdSNNpbN28xD8BvgBpexItZrLaBRWX4s9FA
+        UG80qnplpJI65q5fvHyN57WvUVpZj7iEZI02nwPJVimfNd5QE0uLeDELmcLCMuUMBeWwT6uZBjypakAZ
+        reX195/XIUafpNHmcyDZKsWvoJpo/TE8oMU37j7XcN2UO0aKBOUoul2OQokC4s6TGkTFJmq0+RxItkqt
+        XrESaqJiE2hxLe4+rcU9FfxZDT/DJrcZ6XBqD2QVIqLjNdp8DiRbpVYuXwE1EdF6sVg+1b1RTL8L6LT/
+        yTysxB/E78yDCvx2n6BraFScRnutt495gOVLl0GNr98OHAyLweFIPcKjExGlT0ZMYiriktKhT85AvCEL
+        CSnZAr7XJ2ci9lg6ohNSEak3IIzWhNBa1tjqu12j7b16jXmAZYuX4F9ZsvS/0ZuGxOqVq8wDLFm4CB8K
+        3gbJVin+M/yh4G2QbJVaOG8+3gcvWrpoMZbTaFdR+jU0Qt7HtfROr6MDxfC9D33nTa8Zn/QVZMLjXsym
+        8xdo9Ph7yVap+V5z0RtnzpzBrVu3FEpKUGJKcTGKVRQWFsLRYQImTXSCk+NE2I8br9HkUJKtUl4zZ8EU
+        fjA/Px9FRUW4ceOG4Pr16z3w9+rf5N/56jZ1GmbSf1ieM9zh4uyMOSrdBXPnmQfgh02Z7+WFc+fOCdF5
+        c7zgNWs2ZnvOhJura4/RzZs3xZWDcOfXrl3DlStXRABP0vCYPoMCTNLoso5kq5S723SYwg/KAViEcaaR
+        2o6xEWZsWlBQIAwvXbqEixcv4vz582JqrlOmCvMZrm5wcXLW6M6iEJKtUm60wBQPevjM6dMigPMER4Gj
+        vQPsdDqNKRvyWTl16hRyc3Nx4sQJTJnkgunTXEUQDs16HGa2p6cIIdkqNZUWmOJOC06fOi06ZWPG3m4c
+        bKzH4MKFCxrjkydP4vjx48jKykJaWpo4fFNcXDCZpsbrWE80RVPhq2SrFJ9YU3gCLHz58mXY2eow1sYW
+        ttbWsLYajby8PNFpdnY2MjMzkZ6ejuTkZCQmJiI+Ph4OFNSJJjaR3gZ7OzuhN81lMgVyhuvkKeYB7Mfb
+        V02kpGp4fJkZGTh79iwsR43C8GHDMHTIEIwcObLHNCUlBUlJSUhISIBer0dMTAzCw8Oho7A8rfFj7aCj
+        M8N6ThTGhYLwlki2PdVn4MCBTtTlS04uw4kNBoMYLU+CO87JyRFdy53Gxsbi6NGjiIyMRFhYGEJDQ3Ho
+        0CFYW1pCR1vF2NDE1LqO4+05wKdGa2P1Ib76uF+/H21HW78dR+NmOHFYaFhPh3FxccIsIiJCGB08eBD7
+        9+/Hvn37sHfvXuzZs0fc7969G1Y0pTFWVgJrSyuhJzNqxIhO8vuW+IjN5fqEcO7bt+9PAwYMOEIc9vT0
+        jN25c2cOCeYeOHAgPyQk5FcyvnrkyJECuhbSZ6aAOr5KYS4R+RQiLyggIFWn00WSRgjrSPA9c6B///4b
+        yWswwY33FH/oT3xOfMk4ODgM9vf3/4a6G0ImQ8l0GE1BQCMfzvB3MrQFQ2gCX/v5+Q2iAF/IOioGSdfP
+        iL4WFhYW/wDi9FbDgTQR6QAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="toolStripButton4.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAKeSURBVFhH3ZfLaxNRGMUTUBFBRFwlkIcJeT8mNmLETRbd
-        uxS6lKzFgou6U3cFly4LFRfdSRcidK+gFty0guBfICpaq0i1hurvi9/UmcxkcieTLPTAIZnvce65M3ce
-        NxaEWq1mtVqtx5ZlfeP3VwR+hev1er2s0uPB4JemMLCL6O1Wq9WWDhEMil9r42a5XO5ms9nSpKxUKvPo
-        bamJ5zpEIOLJZPKMEMfHNBYJTKKoEzpIpVJJDfujWCye5RL0Go3GdRNyba8xy462jwSz3xMTnBVLQx7E
-        KboL++o2FOlb63a7R1TLg7EGSN50CL6iYcOE1L6x+zh+OMoEudEG2u32UZI7KnJbw0bgEizZBrTf10Sg
-        gUwmU9HmPv+Pa9gIwwZUx2Mi0IAEtXFPQ8aQhegc3OawiZkZyOVyBfr2nYPbJP5Ay2ZnQMBZWKD3s3Nw
-        5QG3dVNqQhtAtEFsmZjcmh6S62npAIlE4gRn4zxanUKh0CG/LZqskauSpyecAY43JRbEfD4/p+UekH8q
-        NfJQk+NJDNyC34n99CO5bWZ8Sss9IB/NQFT8HwbS6fRp+81oQlrifzqnswbuSSwM6X+m7VMxMBAIyS/y
-        XnH2T2yAFZ7mUbDIfXzDlHx4tLU9uoGo+PcNcPovcrxC/L4hV6m/ou0uA/KKJzf40pJXv5b8hZ8B/r+U
-        WBjSsz+8CJvNZo/4Ha35ZOddGGFgEb6FHwz5Ho1VbT80AD/qr+gvadqNWa4B1ZV3xzLhwweVC7M0gOZK
-        qVTKatgfslmQYqFsIjQ8MWTRofVO9NjcXNZwMCh+IQ043uIOmOes+G61xpEBL6DzSLTgDrM/qUMEg93N
-        OQbf1cbIRKvPRBZU3gzcs/J5vg5lS+0rbMAf8ImcRZUdgVjsN+Z2nhmAF7ZZAAAAAElFTkSuQmCC
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAKlSURBVFhH3Ze9axNhHMcTUBGhiDglkBcT8v5ysSlGXDJ0
+        dxQ6Smax4FA3dSt0dCxUHLpJBxG6K7QWXFpB8C8QFa1VpFql+vnV39W75O7yXC4Z9Atf7u739nyft3vu
+        YkGo1WpWq9V6UiwWv3L9FYFf4Fq9Xi9r6eGg8StjaNjFRqOxV61WW9pEMJrN5itN3CqXy91sNlsalZVK
+        ZdayrG2px3VTmwhEPJlMnhei+JTaIoFOFLVDh6lUKqlmbzD0F5iCHkN204TM7Q162dF0X9D7fRHBqFhq
+        GkCcoCV6/VPVhiLTttrtdk9orQEMFYDztqPgSxLWTUjsazuP50d+IvD5C2i32ydx7mqRu2o2AlOwYAvQ
+        fE8RgQIymUxFnDL83J9WsxH6BQi9RAQKEKMm7qvJGLIQnY3b7BcxMQG5XK6Qz+cPnI3bpN5DDZucAAGj
+        MMf0fXI2rjxkWzclJrQAijawLWJb8iK+noYeIZFInGE0ZqjVKRQKHfw7UpM1cl385IQTwPOW2ILI0E9r
+        +ADwP5MYeanJ8ygC7sBvNPLDi/h26PFZDR8A/mgCouL/EJBOp8/ZJ6MJSYn/yRzPGrgvtjDkQNrQ9LEI
+        OCoQkp/lXHHmjyyAFZ7mVTDPPr5lSj482poeXUBU/PsCGP7LPC9jf2DIFeKvabpLgBzx9peWHP0a8hde
+        Arh/IbYw5A150L8I2Rk9at3TmI+23wUfAfPwDYvrvQnp4TtqrGj6sQD4Qa9Sf0HdbkxyDQj17FjEfPyi
+        cmGSAqi5XCqVsmr2hvwsSLBQfiLUPDJk0VHrrdRjaq6qORgEP5cEFG+zA2YZFc9frWGkwUvUeSy14C69
+        n9ImgsHfzUUa3tPEyJRtR705LW8G9qx8nq9B+aX2LGzA7/CpjKKW9UEs9hsoDZvWN3uRngAAAABJRU5E
+        rkJggg==
 </value>
   </data>
   <data name="toolStripButton5.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -191,11 +192,43 @@
   </data>
   <data name="toolStripButton6.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAACRSURBVDhPY/j27dt/SjDYACcnJ7IwigEf3n8kCZNswPNb
-        J/+f6DYF0yA+yQac6Db5f6hWCmwIiE+mC0wIu2DS2Vf/F1x6DefjwlgNyNr34r/0wkdgTMgQDAOQNRNj
-        CIoBOg0rMTTDMLIhIHbriZeYBmDTiIxBGkEYxge5liQDsGGQqykyAISpZwAlmIEywMAAAAc1/Jwvt6sN
-        AAAAAElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAgISURBVFhHrZcJdI9XGsb/iWXSzRoJTQgVDCYaUkOmiKHp
+        xGl61FKJmqGWUB0RwVBbGUtCWsoo7VhrG2stlWmKaCKRRSQdIkHsjYmMfU0tWZ55nu+7mNDpqaPvOe/J
+        zb3v+/zu8t7v+/6OJ7S69H70ufRt9ATjaqtPY4r5Ra0ivS89jV7meKEyHM1d4QioC0dQA9vVVp/GFGPH
+        Kke5T2VB9DyHSwU4d/RExTGtUXn+71F3aXe0XT8EgVsiLVdbfRpTjGKVY+XaGk9slegLHE6OsoodPfBM
+        TDs0XRmCPyfE4IvDsdh+Ogmxj7j6NKaYpqtCrBzlSsPSsjV/lj1Hj3eqUhnPjfRF/eXBGJk0G6uObsfq
+        //E18jzjj4wpVjnKlYa0pGm0f9I0y3hnt2dQLeq38N/QBx9/twwLstdgYfZqfHZoNWZmLsJ730Zj8O4o
+        hNGHsh2TtRifc0zjcsUqR7nSqE4taUrbMP6vLXCuUgmuM1sjYFMfRO1fiFlZnxGwEMMSozA94wvs/D4T
+        1+8W4b5du3MLcWcyMHXfMkTsiSJ0IT6iK0e50pCWNKUtho163IJ0XrXG+sBvbTDGp87Eh+mzMDEtGqOS
+        P8Gp64UGaVtZWRkKbxUi51IOsi9lI/9GPg5fPmNt/ZR90fjrvpn8O8vSkJY0pW1q4rHC1HXJq/JaHTRa
+        0Q5Ddo/G6ORJ9Alc9VIUl5YYLFBaVorUwmTM+U6A8Q98cvp4rnYqC3I7xqfMw7iUCfSJGLt3Iv5Crfeo
+        KW0xxDLMB9bXmdfGe+EreH1LNwxLiEREYiQmpM5GSWmpQQM/FBdhUc489odjQlo4d8d2tdU3PnU4ocMR
+        vX8yPkgZh9FJEYhMGsGjibQ0pS2GWGLaaNvSavyhNlqsaYM/7XiXRTYYYfFDce7WJYPWykvwefZMrmgA
+        Ptjbn6Dyrj6NjUkewJ0byKMYyJ0Mw/DEibyaYZamtMUQS0wbbT86y5pENUe7ja+i/64/Et4Hi3NWGLRt
+        yQVxFA4hIISgXgTSU4yzrT6NKWZUUghXHYqVh7/EqWsFeHdnX0tzALXFEEtMw3b0q1S1ItqsewVBWwMY
+        3B0Dd3VjQR03aBVcKabt60/xYIzZG0xYMMFvlHP1aUwxo5LepI94UDurjmwmvJulLYZYYoqtCcyt7lcV
+        HTa1Qtft7dFvZxfO9i2UEHrfCm6eoHBnrrAzV9uJW96J513e1acxxbz/bRAXcNJkg3VUgvDECEtbDLHE
+        FFsT2Ob5Ri0EbvZF583t0XFTFwYOMqm2JRXswZtfBTI5kFeyHQvPH5PS/XnFbFdbfRNS/bkbv8PSnGUm
+        86EdvXIaveNeR4/Ytnx/+EJMsTWBhIYhtRG8rQU+yhplwn/cbty9gOjMAF67lrznLTE1w3a11Tc5vRXG
+        pryDOyX3TEZ5W3RoBXp97WexGoZahahXuSOhcW93dI/14Qx9kHU+3oQ/buuPhfO50Awz9jfjRORNjTfj
+        M6AZd+FlHLh42EQ/bndLijEoPtRiiXl/Atu8u9ZEaFxz9N3RlGfYEbfuXTMpDy33cixBjfiI9ebjtiFm
+        0+f8y3a11TfvQEtOsj/W5g3AyWsZJtO2dXlT8LcDQ1grwRZLTLE1gbkebZ634GHxv+adbYJ/HB1r0mwr
+        Kr6MT7P9CKuPuQe8MP+gF/+vxxeO7WqrT2OKiclqwDPPMtm2TUprS+3GFkMsMcXWBPq5VK+AQbsEb4zI
+        Pd6s5oY4djXRpAJfnwnn6uoS5sm3ngefhi9iSW55V5/GFBOd6YPbxXdNNnDlzllLU9piiCWm2JqA9SB6
+        ++9eGMGAsQyclN6A2+XPYrrJl9BOfHrQg+IvYmluHX501MbKo+5877vzW8DNcrXVpzHFrM2LNmjb0goX
+        8bY0sLTFEEtMw7YsrWXPajx/wtMaYFqGF7exLr75PgIrj/hxdQQfIfCoG9Ydq4WNx2vhyxOu2GxcbfVp
+        LCbrVVy5fcOgwYfRbU6+LYvXy9Iew0mIJaaNtq1v5WedMPIbL16r+nyP1+N5evLDwl71ktxWvKKNsImg
+        rSdr8vOrJv55pgaPxna11Re9vzWL9YRB25Z6bpqlJU1piyGWmDbaNut13KZXFZ5fPRaSJ8/Sg3APbm8d
+        bDheG1tOjsOU9FC+IzwQn18TCWdrIvHfNay/8w/Uw6zMCJy9ecFgbTtxbT2W5WohHpamtMUQyzDLWZCT
+        s6Ps/SVurGi70Nbk1eeq6+GrU548Dg8KTueKDvKtuJxFOZV1MgNLctax4vMN0rbSsmLkXZ3DXC9LYzG1
+        pCltMcSykY/bghdcnTF9hzuWs6A2Hn+JHxhNsCu/EfYUeLOYXuIXUCee8Qa+K24a3EMrKSvCxR+2IvN8
+        FytHudKQ1gxqSlsMG/XjZn2UuntVwCe7VVjuFPLB3nN+2P+fljh40ZcvmRa8oj44fd2X3wtv40JROM7T
+        82+E4sgVPytGscpRrjSkJU1pG8ZPmvVZXk07sbYqi8yV2/4bHOLK86504rXsyLMO4PdgB4LbW15Y1MHq
+        O80xxShWOXHMlYa0pGm0f5ZplguceV5d+/8K23OqcFvdKP4yQYHc5p64eqcnv4578AXVw2qrT2OKyTxf
+        C7HMeYu50pCW0Xxis36aPfu8A70HV8KmBBc+41249S6E1kDRPXfL1S5kn8YU8w5jlaNco/FUpuvy4Mep
+        q5sDgV2cMHSYEyZ+6MAkutrq05hiTOwv8uP0UdOj8/7P8630p/x57nD8F0th6buEVFJ1AAAAAElFTkSu
+        QmCC
 </value>
   </data>
 </root>
